--- a/index1234.html
+++ b/index1234.html
@@ -69,7 +69,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <h2 style="background-color: cyan;">I Am From Indore, Madhya Pradesh</h2>
     <br>
     <br>
-<a href="https://en.wikipedia.org/wiki/Indore" target="_blank"><img src="anjin.jpg" alt="Girl in a jacket" width="50" height="60"></a>
+<a href="https://en.wikipedia.org/wiki/Indore" target="_blank"><img src="hqdefault.jpg" alt="Girl in a jacket" width="50" height="60"></a>
     <br>
     <br>
       <h6 class="heading" style="background-color: honeydew;">DATE OF BIRTH:</h6>
@@ -122,7 +122,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <br>
       <br>
 
-      <a href="https://apple.com/" target="_blank"><img src="7.jpg" alt="Girl in a jacket" width="10" height="655550">&nbsp&nbsp
+      <a href="https://apple.com/" target="_blank"><img src="xr.jpg" alt="Girl in a jacket" width="10" height="655550">&nbsp&nbsp
       	<br><br><br><img src="air.jpg" alt="Girl in a jacket" width="10" height="655550"></a>
 
       <br>
