--- a/index1234.html
+++ b/index1234.html
@@ -122,7 +122,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <br>
       <br>
 
-      <a href="https://apple.com/" target="_blank"><img src="xr.jpg" alt="Girl in a jacket" width="10" height="655550">&nbsp&nbsp
+      <a href="https://apple.com/" target="_blank"><img src="xr1.png" alt="Girl in a jacket" width="10" height="655550">&nbsp&nbsp
       	<br><br><br><img src="air.jpg" alt="Girl in a jacket" width="10" height="655550"></a>
 
       <br>
