--- a/index1234.html
+++ b/index1234.html
@@ -40,6 +40,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ############################################################################################### -->
+ <div class="container">
 <div class="wrapper bgded overlay light " style="background-image:url('123.jpg'); height: 1000px;">
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
@@ -122,7 +123,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <br>
       <br>
 
-      <a href="https://apple.com/" target="_blank"><img src="xr1.png" alt="Girl in a jacket" width="10" height="655550">&nbsp&nbsp
+      <a href="https://apple.com/" target="_blank"><img src="xr.png" alt="Girl in a jacket" width="10" height="655550">&nbsp&nbsp
       	<br><br><br><img src="air.jpg" alt="Girl in a jacket" width="10" height="655550"></a>
 
       <br>
@@ -305,6 +306,7 @@ Licence URI: https://www.os-templates.com/template-terms
   </div>
 
 </div>
+ </div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
